Fix button text alignment

--- a/app/assets/stylesheets/custom.css.sass
+++ b/app/assets/stylesheets/custom.css.sass
@@ -35,3 +35,5 @@ input
   padding: 0px
   width: 25px
   height: 25px
+  line-height: 25px
+  margin: 5px
